# EternityQuant

./: .gitignore  .mcp.json  README.md  pyproject.toml  test_camoufox.py  test_hk_minute_api.py
eq/: __init__.py  cli.py  db.py
eq/backtest/: __init__.py  event_driven.py  store.py  types.py  vectorized.py
eq/core/: __init__.py  monitor.py  notifier.py  portfolio.py  python_dotenv_loader.py  research.py  scanner.py  scheduler.py  watcher.py  watchlist.py
eq/data/: __init__.py  collector.py  hk_market.py  market.py  paths.py
eq/strategy/: __init__.py  types.py
eq/strategy/factors/: __init__.py  advanced_models.py  fundamental.py  ml.py  ml_data_updater.py  ml_workflow.py  technical.py  volume.py
eq/strategy/signals/: __init__.py  reversal.py  trend.py
eq/web/: __init__.py  dashboard.py  runner.py
notebooks/: colab_eternityquant_train.ipynb  kaggle_eternityquant_train.ipynb
tests/: conftest.py  test_db.py  test_factors.py  test_monitor.py  test_portfolio.py  test_research.py  test_scanner.py  test_watchlist.py
